--- a/style.css
+++ b/style.css
@@ -83,9 +83,8 @@
     /* banner-style */
     .banner{
         height: auto;
-        width: 100%;
+        width: calc(100% - 15px);
         text-align: left;
-        padding: 15px;
         
     }
     .banner{
@@ -94,6 +93,7 @@
     }
     .banner-title{
         margin-bottom: 15px;
+        padding: 10px;
     }
     .banner-description{
         width: calc(100% - 10px);
@@ -119,9 +119,9 @@
     }
     .section-description{
         display: inline-block;
-        width: calc(100% - 20px);
-        padding: 0 20px;
-        margin-bottom: 15px;
+        width: 336px;
+        padding: 10px;
+        margin: 0 auto 15px;
     }
     .plant-content{
         display: grid;
