--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 20px;
         margin-bottom: 20px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -203,6 +204,17 @@
     .item-3{
         background-image:linear-gradient(360deg,hsla(0, 0%, 0%, 0.5),hsla(0, 0%, 0%, 0.5)), url(assets/deal-zabo.png);
     }
+    .item-title{
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .shop-btn{
+        font-weight: bold;
+        background-color: transparent;
+        border: none;
+        color: white;
+        text-decoration: underline;
+    }
 
     /* join section  */
     .join-to-bunch{
@@ -215,8 +227,24 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        color: white;
+        margin-bottom: 50px;
     }
-    
+    .input-section{
+        display: flex;
+    }
+    .input-section input{
+        height: 50px;
+        width: 218px;
+        padding: 15px;
+    }
+    input::placeholder{
+        color: #00000080;
+    }
+    .subscribe-btn{
+        height: 50px;
+        width: 103px;
+    }
 
 
 
