--- a/style.css
+++ b/style.css
@@ -376,9 +376,9 @@
          width: 100%;
          text-align: left;
          flex-direction: column-reverse;
-         gap: 30px;
+         gap: 15px;
          align-items: flex-start;
-         margin: 0 auto 40px;
+         margin: 0 auto 20px;
 
      }
 
@@ -413,14 +413,13 @@
          width: calc(100% - 20px);
          margin: 10px;
          text-align: center;
-         margin-bottom: 100px;
+         margin-bottom: 50px;
      }
 
      .section-title {
          font-size: 24px;
          font-weight: bold;
          margin-bottom: 15px;
-         padding: 10px;
      }
 
      .section-description {
@@ -428,8 +427,8 @@
          display: inline-block;
          width: calc(100% - 20px);
         font-size: 14px;
-         padding: 10px;
-         margin: 0 auto;
+         padding: 0;
+         margin: 0 auto 20px;
      }
 
      .plant-content {
@@ -467,7 +466,7 @@
         font-weight: bold;
      }
 
-     /* plant store style  */
+     /* flower store style  */
 
      .flower-store {
          width: 100%;
@@ -508,16 +507,18 @@
      .deal {
          width: 100%;
          text-align: center;
-         margin-bottom: 50px;
+         margin-bottom: 20px;
      }
 
      .deal>h2 {
          font-size: 24px;
+         margin-bottom: 15px;
      }
 
      .deal>p {
          font-size: 14px;
-         padding: 10px;
+         padding: 0 20px;
+         margin-bottom: 15px;
      }
 
      .deal-content {
@@ -537,7 +538,6 @@
          justify-content: center;
          align-items: center;
          gap: 20px;
-         margin-bottom: 20px;
          background-repeat: no-repeat;
          background-size: cover;
          border-radius: 15px;
@@ -567,7 +567,7 @@
          align-items: center;
          justify-content: center;
          color: white;
-         margin-bottom: 50px;
+         margin-bottom: 30px;
      }
      .join-to-bunch > h2{
         font-size: 20px;
@@ -582,6 +582,7 @@
          width: 218px;
          padding: 15px;
          border: none;
+         outline: none;
          border-radius: none;
      }
 
@@ -592,6 +593,7 @@
      .subscribe-btn {
          height: 50px;
          width: 103px;
+         border: none;
      }
 
      /* footer style  */
