--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@
          padding: 15px;
          border: none;
          outline: none;
-         border-radius: none;
+         border-radius: 0;
      }
 
      input::placeholder {
