--- a/style.css
+++ b/style.css
@@ -423,10 +423,9 @@
      }
 
      .section-description {
-
-         display: inline-block;
+         /* display: inline-block; */
          width: calc(100% - 20px);
-        font-size: 14px;
+         font-size: 14px;
          padding: 0;
          margin: 0 auto 20px;
      }
