adjust margin and padding

--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@
          justify-content: space-between;
          align-items: center;
          margin: 30px auto;
+         padding: 0 10px;
      }
      .hidden{
         display: none;
@@ -385,7 +386,7 @@
      .banner-content {
          width: 100%;
          height: auto;
-        padding: 10px;
+         padding: 15px;
      }
 
      .banner-title {
@@ -397,7 +398,7 @@
 
      .banner-description {
          width: calc(100% - 10px);
-         padding: 0 10px;
+         padding: 0;
          font-size: 14px;
          text-align: left;
      }
@@ -411,7 +412,7 @@
      .plants {
          height: auto;
          width: calc(100% - 20px);
-         margin: 10px;
+         padding: 0 10px;
          text-align: center;
          margin-bottom: 50px;
      }
@@ -434,7 +435,7 @@
          display: grid;
          grid-template-columns: repeat(2, 1fr);
          grid-template-rows: repeat(4, 1fr);
-         gap: 10px;
+         gap: 15px;
          width: 100%;
          margin: 0 auto;
      }
@@ -469,7 +470,7 @@
      .flower-store {
          width: 100%;
          height: auto;
-         padding: 0 10px;
+         padding: 0 15px;
          flex-direction: column;
          gap: 20px;
          text-align: left;
@@ -597,7 +598,7 @@
      /* footer style  */
 
      footer {
-         padding: 10px;
+         padding: 20px;
          flex-direction: column;
          height: auto;
          gap: 10px;
